test/error/call_expr_get_literal.colgm
func test(a: i64&) {
    a += 1;
}

func main() -> i32 {
    var a = 1;
    test(a);
    test(114);
    return 0;
}