test/error/call_expr_get_literal.result
Error: cannot pass literal as reference
  --> test/error/call_expr_get_literal.colgm:8:10
  | 
8 |     test(114);
  |          ^^^